# docfresh

./: .editorconfig  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  release.yml
src/: audit.rs  concept_graph.rs  concepts.rs  config.rs  coverage.rs  embeddings.rs  git.rs  main.rs  manifest.rs  presets.rs  report.rs  suggest.rs
tests/: integration.rs
