[package]
name = "docfresh"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Track documentation freshness against source code"
license = "MIT OR Apache-2.0"
repository = "https://github.com/os-tack/docfresh"
readme = "README.md"
keywords = ["documentation", "freshness", "audit", "staleness"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
colored = "2"
glob = "0.3"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# pedantic overrides — allow reasonable patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
cast_precision_loss = "allow"

[profile.release]
lto = true
strip = true
codegen-units = 1
